--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,9 +1,11 @@
 body {
-    background-color: black;
+    background-color: #333;
+    margin: 0;
     color: white;
+    min-height: 100vh;
     display: flex;
     justify-content: center;
-    justify-content: center;
+    align-items: center;
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
